--- a/configs/dotconfig/hypr/lib/rules.conf
+++ b/configs/dotconfig/hypr/lib/rules.conf
@@ -8,24 +8,23 @@
 # WINDOW RULES
 
 # general float rules
-windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress)
-windowrulev2=float,title:([oO]pen|[uU]pload|[fF]ile|[eE]xport)
-windowrulev2=float,title:([iI]mport|[fF]ile|[dD]ownloadi|[pP]roperties)
-windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication)
+windowrulev2=float,title:^.*([cC]ompress|[eE]xtract|[pP]rogress).*$
+windowrulev2=float,title:^.*([oO]pen|[uU]pload|[fF]ile|[eE]xport).*$
+windowrulev2=float,title:^.*([iI]mport|[fF]ile|[dD]ownloadi|[pP]roperties).*$
+windowrulev2=float,title:^.*([pP]in|[pP]assword|[aA]uthentication).*$
 windowrulev2=float,title:^$
 
 # app specific float rules
-windowrulev2=float,initialTitle:^([sS]ignal)$
-windowrulev2=float,class:(fstl-app)
+windowrulev2=float,class:(org.signal.Signal)
 windowrulev2=float,class:(ristretto)
-windowrulev2=float,class:^(mpv)$
-windowrulev2=float,class:^(org.pwmt.zathura)$
+windowrulev2=float,class:(mpv)
+windowrulev2=float,class:(org.pwmt.zathura)
 
-# min/max size rule for all
-windowrulev2=minsize 250 150,class:(),xwayland=0
+# min size rule for all that arent xwayland
+windowrulev2=minsize 50 50,class:^.*$,xwayland=0
 
 # idleinhibit rule for fullscreen
-windowrulev2=idleinhibit fullscreen,class:()
+windowrulev2=idleinhibit fullscreen,class:^.*$
 
 # tearing for gamescope
-windowrulev2=immediate,class:(gamescope|gamescope-wl)
+windowrulev2=immediate,class:^.*(gamescope|gamescope-wl).*$
