change rwpspread init and hyprlock

--- a/configs/dotconfig/hypr/hyprlock.conf
+++ b/configs/dotconfig/hypr/hyprlock.conf
@@ -18,9 +18,12 @@ general {
 # clock on all monitors
 label {
     monitor =
-    text = cmd[update:15000] date "+%R"
+    text = $TIME
     text_align = center
     color = rgb(ffffff)
+    shadow_passes = 1
+    shadow_size = 2
+    shadow_color = rgb(000000)
     font_size = 64
     font_family = Open Sans Bold
     position = 0, -150
@@ -34,6 +37,9 @@ label {
     text = cmd[update:15000] date "+%A, %d %B"
     text_align = center
     color = rgb(ffffff)
+    shadow_passes = 1
+    shadow_size = 1
+    shadow_color = rgb(000000)
     font_size = 14
     font_family = Open Sans Semibold
     position = 0, -250
@@ -47,9 +53,12 @@ label {
     text = cmd[update:15000] echo "$(/home/$USER/.config/scripts/bat.sh percent)"
     text_align = center
     color = rgb(ffffff)
-    font_size = 15
+    shadow_passes = 1
+    shadow_size = 1
+    shadow_color = rgb(000000)
+    font_size = 14
     font_family = Open Sans Semibold
-    position = 0, 40
+    position = 0, 60
     halign = center
     valign = bottom
 }
@@ -57,12 +66,15 @@ label {
 # input field on all monitors
 input-field {
     monitor =
-    inner_color = rgb(dddddd)
-    outer_color = rgb(dddddd)
+    outer_color = rgb(ffffff)
+    inner_color = rgb(ffffff)
     font_color = rgb(000000)
-    check_color = rgb(dddddd)
-    fail_color = rgb(aa0000)
-    capslock_color = rgb(dddd00)
+    fail_color = rgb(ff0000)
+    shadow_passes = 1
+    shadow_size = 1
+    shadow_color = rgb(000000)
+    outline_thickness = 1
+    dots_size = 0.3
     swap_font_color = false
     placeholder_text = <i></i>
     fail_text = <i></i>
@@ -70,7 +82,6 @@ input-field {
     fade_timeout = 250
     fade_on_empty = true
     size = 130, 30
-    outline_thickness = 0
     rounding = 15
     dots_center = true
     position = 0, 20
