--- a/configs/dotconfig/hypr/lib/rules.conf
+++ b/configs/dotconfig/hypr/lib/rules.conf
@@ -18,6 +18,7 @@ windowrulev2=float,title:^$
 windowrulev2=float,class:(org.signal.Signal)
 windowrulev2=float,class:(ristretto)
 windowrulev2=float,class:(mpv)
+windowrulev2=float,class:(vlc)
 windowrulev2=float,class:(org.pwmt.zathura)
 
 # min size rule for all that arent xwayland
