--- a/configs/dotconfig/kitty/kitty.conf
+++ b/configs/dotconfig/kitty/kitty.conf
@@ -6,9 +6,11 @@
 #                /____/
 
 # includes
-include kitty-colors.conf
+include themes/mocha.conf
 
 # base color
+foreground #FCFAF2
+background #121212
 selection_background #f0f0f0
 selection_foreground #101010
 background_opacity 0.93
