bring most configs up to date

--- a/configs/dotconfig/hypr/lib/rules.conf
+++ b/configs/dotconfig/hypr/lib/rules.conf
@@ -7,11 +7,7 @@
 
 # WINDOW RULES
 
-# general float rules
-windowrulev2=float,title:^.*([cC]ompress|[eE]xtract|[pP]rogress).*$
-windowrulev2=float,title:^.*([oO]pen|[uU]pload|[fF]ile|[eE]xport).*$
-windowrulev2=float,title:^.*([iI]mport|[fF]ile|[dD]ownloadi|[pP]roperties).*$
-windowrulev2=float,title:^.*([pP]in|[pP]assword|[aA]uthentication).*$
+# float windows with no title
 windowrulev2=float,title:^$
 
 # app specific float rules
