--- a/configs/etc/pacman.conf
+++ b/configs/etc/pacman.conf
@@ -21,32 +21,14 @@ RemoteFileSigLevel = Required
 
 # REPOSITORIES
 
-#[core-testing]
-#Include = /etc/pacman.d/mirrorlist
-
-#[core-staging]
-#Include = /etc/pacman.d/mirrorlist
-
 [core]
 Include = /etc/pacman.d/mirrorlist
-
-#[extra-testing]
-#Include = /etc/pacman.d/mirrorlist
-
-#[extra-staging]
-#Include = /etc/pacman.d/mirrorlist
 
 [extra]
 Include = /etc/pacman.d/mirrorlist
 
-#[multilib-testing]
-#Include = /etc/pacman.d/mirrorlist
-
-#[multilib-staging]
-#Include = /etc/pacman.d/mirrorlist
-
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
-#[archstrike]
-#Include = /etc/pacman.d/archstrike-mirrorlist
+[chaotic-aur]
+Include = /etc/pacman.d/chaotic-mirrorlist
