restruct hypr config

--- a/configs/dotconfig/hypr/example.conf
+++ b/configs/dotconfig/hypr/example.conf
@@ -12,12 +12,12 @@ $BGD=0xFF000000
 $NRM=0xFF000000
 $ACT=0xFF000000
 $URG=0xFF000000
+$BRD=0xFF000000
 
 # INPUTS
 
-# def
 monitor=,highres,auto,1
 
 # IMPORTS
 
-source=./lib/main.conf
+source=./hyprland.conf.d/main.conf
