--- a/configs/dotconfig/hypr/hyprland.conf.d/main.conf
+++ b/configs/dotconfig/hypr/hyprland.conf.d/main.conf
@@ -50,7 +50,7 @@ general {
 
 group {
     col.border_inactive=0x00000000
-    col.border_active=$ACT
+    col.border_active=$BRD
 }
 
 decoration {
