--- a/configs/dotconfig/kitty/kitty.conf
+++ b/configs/dotconfig/kitty/kitty.conf
@@ -9,7 +9,7 @@
 include themes/mocha.conf
 
 # base color
-foreground #FCFAF2
+foreground #fcfaf2
 background #121212
 selection_background #f0f0f0
 selection_foreground #101010
