--- a/configs/dotconfig/hypr/hypridle.conf
+++ b/configs/dotconfig/hypr/hypridle.conf
@@ -1,20 +1,31 @@
+#     __  ___________        __                     _     ____
+#    / /_<  / __/ __ \      / /_  __  ______  _____(_)___/ / /__
+#   / //_/ / /_/ / / /_____/ __ \/ / / / __ \/ ___/ / __  / / _ \
+#  / ,< / / __/ /_/ /_____/ / / / /_/ / /_/ / /  / / /_/ / /  __/
+# /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/\___/
+#                              /____/_/
+
+# general config
 general {
     lock_cmd = pidof hyprlock || hyprlock
     ignore_dbus_inhibit = false
     ignore_systemd_inhibit = false
 }
 
+# lock the session after 300s inactivity
+listener {
+    timeout = 300
+    on-timeout = loginctl lock-session
+}
+
+# if session is locked, turn monitors off after 30s inactivity
 listener {
     timeout = 30
     on-timeout = pidof hyprlock && sleep 1 && hyprctl dispatch dpms off
     on-resume = pidof hyprlock && sleep 1 && hyprctl dispatch dpms on
 }
 
-listener {
-    timeout = 300
-    on-timeout = loginctl lock-session
-}
-
+# if session is locked, turn monitors off after 330s inactivity
 listener {
     timeout = 330
     on-timeout = pidof hyprlock && sleep 1 && hyprctl dispatch dpms off
