--- a/configs/dotconfig/hypr/hyprland.conf.d/exec.conf
+++ b/configs/dotconfig/hypr/hyprland.conf.d/exec.conf
@@ -13,5 +13,5 @@ exec-once=/usr/lib/mate-polkit/polkit-mate-authentication-agent-1
 exec-once=nwg-look -a
 exec-once=systemctl --user restart xsettingsd.service
 exec-once=easyeffects --gapplication-service
-exec=/home/$USER/.config/hypr/scripts/autostart.sh
+exec=/home/$USER/.config/hypr/hyprland.conf.d/autostart.sh
 exec-once=/home/$USER/.config/scripts/postBoot.sh
