--- a/configs/dotconfig/kitty/kitty.conf
+++ b/configs/dotconfig/kitty/kitty.conf
@@ -6,11 +6,10 @@
 #                /____/
 
 # includes
-include themes/mocha.conf
+include kitty.conf.d/static/mocha.conf
+include kitty.conf.d/user.conf
 
 # base color
-foreground #fcfaf2
-background #121212
 selection_background #f0f0f0
 selection_foreground #101010
 background_opacity 0.93
