--- a/configs/dotconfig/hypr/hyprland.conf
+++ b/configs/dotconfig/hypr/hyprland.conf
@@ -8,9 +8,6 @@
 # IMPORTS
 
 source=./hyprland.conf.d/user.conf
-source=./hyprland.conf.d/static/rules.conf
-source=./hyprland.conf.d/static/binds.conf
-source=./hyprland.conf.d/static/exec.conf
 
 # MAIN
 
@@ -86,19 +83,15 @@ animations {
     enabled=true
     first_launch_animation=false
     bezier=uni,0.05,0.9,0.1,1
-    bezier=fde,0.3,1,0.5,1
+    bezier=unios,0.05,0.9,0.1,1.05
     animation=layers,0
     animation=border,0
     animation=borderangle,0
-    animation=windowsIn,1,3.5,fde,popin
-    animation=windowsOut,1,2.5,fde,popin
-    animation=windowsMove,1,3.5,default
-    animation=fade,1,3.5,uni
-    animation=fadeIn,1,3.5,fde
-    animation=fadeOut,1,2.5,fde
-    animation=workspaces,1,3.5,uni,slidefade
-    animation=workspacesIn,1,3.5,fde,slide
-    animation=workspacesOut,1,2.5,fde,slide
+    animation=windowsIn,1,4.5,unios,popin 75%
+    animation=windowsOut,1,3.5,uni,popin 75%
+    animation=windowsMove,1,3.5,uni
+    animation=fade,1,4,uni
+    animation=workspaces,1,4,uni,slide
 }
 
 dwindle {
@@ -123,3 +116,103 @@ misc {
     disable_splash_rendering=false
     enable_swallow=false
 }
+
+# WINDOW RULES
+
+# float windows with no title
+windowrulev2=float,title:^$
+
+# app specific float rules
+windowrulev2=float,class:(org.signal.Signal)
+windowrulev2=float,class:(ristretto)
+windowrulev2=float,class:(mpv)
+windowrulev2=float,class:(vlc)
+windowrulev2=float,class:(org.pwmt.zathura)
+
+# min size rule for all that arent xwayland
+windowrulev2=minsize 50 50,class:^.*$,xwayland=0
+
+# idleinhibit rule for fullscreen
+windowrulev2=idleinhibit fullscreen,class:^.*$
+
+# tearing for gamescope
+windowrulev2=immediate,class:^.*(gamescope|gamescope-wl).*$
+
+# BINDS
+
+# app binds
+bind=SUPER,Return,exec,kitty
+bind=SUPER,Q,exec,caja
+bind=SUPER,A,exec,rofi -show run
+bind=SUPER,L,exec,hyprlock
+bind=SUPER,T,exec,kitty yazi
+bind=SUPERSHIFT,S,exec,/home/$USER/.config/scripts/wayland/screenshot.sh
+bind=SUPERSHIFT,Q,exec,eww open-many --toggle powermenu-blur powermenu
+bind=SUPERSHIFT,A,exec,rofi -show calc
+bind=SUPERSHIFT,E,exec,rofi -show emoji -emoji-mode copy
+
+# wm mod binds
+bindm=SUPER,mouse:272,movewindow
+bindm=SUPER,mouse:273,resizewindow
+bind=SUPER,mouse_down,workspace,e-1
+bind=SUPER,mouse_up,workspace,e+1
+bind=SUPER,B,bringactivetotop
+bind=SUPERSHIFT,C,killactive
+bind=SUPERSHIFT,R,exec,hyprctl reload
+bind=SUPERSHIFT,F,togglefloating,
+bind=SUPERCTRL,F,fullscreen
+bind=SUPERCTRL,S,workspaceopt,allfloat
+
+# navigation binds
+bind=SUPER,left,movefocus,l
+bind=SUPER,right,movefocus,r
+bind=SUPER,up,movefocus,u
+bind=SUPER,down,movefocus,d
+bind=SUPERCTRL,right,movecurrentworkspacetomonitor,r
+bind=SUPERCTRL,left,movecurrentworkspacetomonitor,l
+bind=SUPERCTRL,right,movecurrentworkspacetomonitor,r
+bind=SUPERCTRL,left,movecurrentworkspacetomonitor,l
+binde=SUPERALT,left,resizeactive,-30 0
+binde=SUPERALT,right,resizeactive,30 0
+binde=SUPERALT,up,resizeactive,0 -30
+binde=SUPERALT,down,resizeactive,0 30
+binde=SUPERALTSHIFT,left,moveactive,-30 0
+binde=SUPERALTSHIFT,right,moveactive,30 0
+binde=SUPERALTSHIFT,up,moveactive,0 -30
+binde=SUPERALTSHIFT,down,moveactive,0 30
+bind=SUPERSHIFT,left,movewindow,l
+bind=SUPERSHIFT,right,movewindow,r
+bind=SUPERSHIFT,up,movewindow,u
+bind=SUPERSHIFT,down,movewindow,d
+bind=SUPERSHIFT,1,movetoworkspacesilent,1
+bind=SUPERSHIFT,2,movetoworkspacesilent,2
+bind=SUPERSHIFT,3,movetoworkspacesilent,3
+bind=SUPERSHIFT,4,movetoworkspacesilent,4
+bind=SUPERSHIFT,5,movetoworkspacesilent,5
+bind=SUPER,1,workspace,1
+bind=SUPER,2,workspace,2
+bind=SUPER,3,workspace,3
+bind=SUPER,4,workspace,4
+bind=SUPER,5,workspace,5
+
+# media keys
+bind=,XF86Calculator,exec,rofi -show calc
+binde=,XF86AudioLowerVolume,exec,/home/$USER/.config/scripts/volume.sh sink-incr "-" "2"
+binde=,XF86AudioRaiseVolume,exec,/home/$USER/.config/scripts/volume.sh sink-incr "+" "2"
+bind=,XF86AudioMute,exec,/home/$USER/.config/scripts/volume.sh sink-mute
+bind=,XF86Mail,exec,/home/$USER/.config/scripts/volume.sh source-mute
+bind=,XF86AudioNext,exec,/home/$USER/.config/scripts/media.sh next
+bind=,XF86AudioPrev,exec,/home/$USER/.config/scripts/media.sh prev
+bind=,XF86AudioPlay,exec,/home/$USER/.config/scripts/media.sh pp
+binde=,XF86MonBrightnessDown,exec,/home/$USER/.config/scripts/brightness.sh down
+binde=,XF86MonBrightnessUp,exec,/home/$USER/.config/scripts/brightness.sh up
+
+# EXECS
+
+exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=/usr/lib/mate-polkit/polkit-mate-authentication-agent-1
+exec-once=nwg-look -a
+exec-once=systemctl --user restart xsettingsd.service
+exec-once=easyeffects --gapplication-service
+exec=/home/$USER/.config/hypr/hyprinit.sh
