rewrote scripts again, deal with it

--- a/configs/dotconfig/hypr/hyprland.conf
+++ b/configs/dotconfig/hypr/hyprland.conf
@@ -103,6 +103,10 @@ dwindle {
     smart_resizing=true
 }
 
+render {
+    direct_scanout=2
+}
+
 misc {
     vfr=true
     vrr=1
@@ -120,23 +124,23 @@ misc {
 # WINDOW RULES
 
 # float windows with no title
-windowrulev2=float,title:^$
+windowrule=float,title:^$
 
 # app specific float rules
-windowrulev2=float,class:(org.signal.Signal)
-windowrulev2=float,class:(ristretto)
-windowrulev2=float,class:(mpv)
-windowrulev2=float,class:(vlc)
-windowrulev2=float,class:(org.pwmt.zathura)
+windowrule=float,class:(org.signal.Signal)
+windowrule=float,class:(ristretto)
+windowrule=float,class:(mpv)
+windowrule=float,class:(vlc)
+windowrule=float,class:(org.pwmt.zathura)
 
 # min size rule for all that arent xwayland
-windowrulev2=minsize 50 50,class:^.*$,xwayland=0
+windowrule=minsize 50 50,class:^.*$,xwayland=0
 
 # idleinhibit rule for fullscreen
-windowrulev2=idleinhibit fullscreen,class:^.*$
+windowrule=idleinhibit fullscreen,class:^.*$
 
 # tearing for gamescope
-windowrulev2=immediate,class:^.*(gamescope|gamescope-wl).*$
+windowrule=immediate,class:^.*(gamescope|gamescope-wl).*$
 
 # BINDS
 
