adjust hyprland config

--- a/configs/dotconfig/hypr/hyprland.conf
+++ b/configs/dotconfig/hypr/hyprland.conf
@@ -121,6 +121,10 @@ misc {
     enable_swallow=false
 }
 
+debug {
+    full_cm_proto=true
+}
+
 # WINDOW RULES
 
 # float windows with no title
@@ -164,6 +168,7 @@ bind=SUPER,B,bringactivetotop
 bind=SUPERSHIFT,C,killactive
 bind=SUPERSHIFT,R,exec,hyprctl reload
 bind=SUPERSHIFT,F,togglefloating,
+bind=SUPERSHIFT,D,togglesplit,
 bind=SUPERCTRL,F,fullscreen
 bind=SUPERCTRL,S,workspaceopt,allfloat
 
