hypr: update defaults

--- a/configs/dotconfig/hypr/hyprlock.conf
+++ b/configs/dotconfig/hypr/hyprlock.conf
@@ -5,11 +5,16 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\____/\___/_/|_|  
 #                              /____/_/                              
 
-# include generated rwpspread images
+# imports
+source=./hyprlock.conf.d/user.conf
 source=/home/$USER/.cache/rwpspread/rwps_hyprlock.conf 
 
 # general config
 general {
+    bezier = linear, 1, 1, 0, 0
+    animation = fadeIn, 1, 1, linear
+    animation = fadeOut, 1, 1, linear
+    animation = inputfield, 1, 1, linear
     hide_cursor = true
     disable_loading_bar = true
     ignore_empty_input = true
@@ -17,7 +22,7 @@ general {
 
 # clock on all monitors
 label {
-    monitor =
+    monitor = $PRIMARY
     text = $TIME
     text_align = center
     color = rgb(ffffff)
@@ -33,7 +38,7 @@ label {
 
 # date label on all monitors
 label {
-    monitor =
+    monitor = $PRIMARY
     text = cmd[update:15000] date "+%A, %d %B"
     text_align = center
     color = rgb(ffffff)
@@ -49,7 +54,7 @@ label {
 
 # battery label on all monitors
 label {
-    monitor =
+    monitor = $PRIMARY
     text = cmd[update:15000] echo "$(/home/$USER/.config/scripts/bat.sh percent)"
     text_align = center
     color = rgb(ffffff)
@@ -65,7 +70,7 @@ label {
 
 # input field on all monitors
 input-field {
-    monitor =
+    monitor = $PRIMARY
     outer_color = rgb(ffffff)
     inner_color = rgb(ffffff)
     font_color = rgb(000000)
