--- a/configs/dotconfig/hypr/hyprlock.conf.d/example.conf
+++ b/configs/dotconfig/hypr/hyprlock.conf.d/example.conf
@@ -5,15 +5,6 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
-# COLORS
+# PRIMARY MONITOR
 
-$FGD=0xFF000000
-$BGD=0xFF000000
-$NRM=0xFF000000
-$ACT=0xFF000000
-$URG=0xFF000000
-$BRD=0xFF000000
-
-# INPUTS
-
-monitor=,highres,auto,1,bitdepth,8,cm,srgb
+$monitor_primary = HDMI-1
