hypr theming changes

--- a/configs/dotconfig/hypr/hyprland.conf
+++ b/configs/dotconfig/hypr/hyprland.conf
@@ -7,7 +7,7 @@
 
 # IMPORTS
 
-source=./hyprland.conf.d/user.conf
+source=/home/$USER/.config/hypr/hyprland.conf.d/user.conf
 
 # MAIN
 
@@ -47,8 +47,8 @@ general {
 }
 
 group {
-    col.border_inactive=0x00000000
-    col.border_active=$BRD
+    col.border_inactive=0xFF000000
+    col.border_active=$COLOR_BORDER
 }
 
 decoration {
@@ -62,7 +62,7 @@ decoration {
         range=10
         sharp=false
         render_power=4
-        color=$ACT
+        color=$COLOR_ACTIVE
         color_inactive=0x00000000
     }
     blur {
