--- a/configs/dotconfig/hypr/hyprland.conf.d/example.conf
+++ b/configs/dotconfig/hypr/hyprland.conf.d/example.conf
@@ -7,12 +7,11 @@
 
 # COLORS
 
-$FGD=0xFF000000
-$BGD=0xFF000000
-$NRM=0xFF000000
-$ACT=0xFF000000
-$URG=0xFF000000
-$BRD=0xFF000000
+$COLOR_FOREGROUND=0xFF000000
+$COLOR_BACKGROUND=0xFF000000
+$COLOR_NORMAL=0xFF000000
+$COLOR_ACTIVE=0xFF000000
+$COLOR_BORDER=0xFF000000
 
 # INPUTS
 
