--- a/configs/dotconfig/hypr/hyprlock.conf
+++ b/configs/dotconfig/hypr/hyprlock.conf
@@ -1,95 +1,107 @@
-#     __  ___________        __                     __           __  
+#     __  ___________        __                     __           __
 #    / /_<  / __/ __ \      / /_  __  ______  _____/ /___  _____/ /__
 #   / //_/ / /_/ / / /_____/ __ \/ / / / __ \/ ___/ / __ \/ ___/ //_/
-#  / ,< / / __/ /_/ /_____/ / / / /_/ / /_/ / /  / / /_/ / /__/ ,<   
-# /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\____/\___/_/|_|  
-#                              /____/_/                              
+#  / ,< / / __/ /_/ /_____/ / / / /_/ / /_/ / /  / / /_/ / /__/ ,<
+# /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\____/\___/_/|_|
+#                              /____/_/
 
 # imports
-source=./hyprlock.conf.d/user.conf
-source=/home/$USER/.cache/rwpspread/rwps_hyprlock.conf 
+source=/home/$USER/.config/hypr/hyprlock.conf.d/user.conf
+source=/home/$USER/.cache/rwpspread/rwps_hyprlock.conf
 
 # general config
 general {
-    bezier = linear, 1, 1, 0, 0
-    animation = fadeIn, 1, 1, linear
-    animation = fadeOut, 1, 1, linear
-    animation = inputfield, 1, 1, linear
-    hide_cursor = true
-    disable_loading_bar = true
-    ignore_empty_input = true
+    bezier=linear,1,1,0,0
+    animation=fadeIn,1,1, linear
+    animation=fadeOut,1,1,linear
+    animation=inputfield,1,1,linear
+    hide_cursor=true
+    disable_loading_bar=true
+    ignore_empty_input=true
 }
 
 # clock on all monitors
 label {
-    monitor = $PRIMARY
-    text = $TIME
-    text_align = center
-    color = rgb(ffffff)
-    shadow_passes = 1
-    shadow_size = 2
-    shadow_color = rgb(000000)
-    font_size = 64
-    font_family = Open Sans Bold
-    position = 0, -150
-    halign = center
-    valign = top
+    monitor=$MONITOR_PRIMARY
+    text=$TIME
+    text_align=center
+    color=$COLOR_FOREGROUND
+    shadow_passes=1
+    shadow_size=2
+    shadow_color=rgb(000000)
+    font_size=64
+    font_family=Open Sans Bold
+    position=0,375
+    halign=center
+    valign=center
 }
 
 # date label on all monitors
 label {
-    monitor = $PRIMARY
-    text = cmd[update:15000] date "+%A, %d %B"
-    text_align = center
-    color = rgb(ffffff)
-    shadow_passes = 1
-    shadow_size = 1
-    shadow_color = rgb(000000)
-    font_size = 14
-    font_family = Open Sans Semibold
-    position = 0, -250
-    halign = center
-    valign = top
+    monitor=$MONITOR_PRIMARY
+    text=cmd[update:15000] date "+%A, %d %B"
+    text_align=center
+    color=$COLOR_FOREGROUND
+    shadow_passes=1
+    shadow_size=1
+    shadow_color=rgb(000000)
+    font_size=14
+    font_family=Open Sans Semibold
+    position=0,300
+    halign=center
+    valign=center
 }
 
-# battery label on all monitors
+# battery label
 label {
-    monitor = $PRIMARY
-    text = cmd[update:15000] echo "$(/home/$USER/.config/scripts/bat.sh percent)"
-    text_align = center
-    color = rgb(ffffff)
-    shadow_passes = 1
-    shadow_size = 1
-    shadow_color = rgb(000000)
-    font_size = 14
-    font_family = Open Sans Semibold
-    position = 0, 60
-    halign = center
-    valign = bottom
+    monitor=$MONITOR_PRIMARY
+    text=cmd[update:15000] echo "$(/home/$USER/.config/scripts/bat.sh percent)"
+    text_align=center
+    color=$COLOR_FOREGROUND
+    shadow_passes=1
+    shadow_size=1
+    shadow_color=rgb(000000)
+    font_size=14
+    font_family=Open Sans Semibold
+    position=0,50
+    halign=center
+    valign=bottom
 }
 
-# input field on all monitors
+# profile picture
+image {
+    monitor=$MONITOR_PRIMARY
+    path=/home/$USER/.lockuser
+    size=125
+    rounding=-1
+    border_size=2
+    border_color=rgba(255, 255, 255, 0.5)
+    shadow_passes=1
+    shadow_size=1
+    shadow_color=rgb(000000)
+    position=0,0
+    halign=center
+    valign=center
+}
+
+# main input field
 input-field {
-    monitor = $PRIMARY
-    outer_color = rgb(ffffff)
-    inner_color = rgb(ffffff)
-    font_color = rgb(000000)
-    fail_color = rgb(ff0000)
-    shadow_passes = 1
-    shadow_size = 1
-    shadow_color = rgb(000000)
-    outline_thickness = 1
-    dots_size = 0.3
-    swap_font_color = false
-    placeholder_text = <i></i>
-    fail_text = <i></i>
-    fail_transition = 250
-    fade_timeout = 250
-    fade_on_empty = true
-    size = 130, 30
-    rounding = 15
-    dots_center = true
-    position = 0, 20
-    halign = center
-    valign = bottom
+    monitor=$MONITOR_PRIMARY
+    size=170,35
+    outer_color=rgba(255, 255, 255, 0.1)
+    inner_color=rgba(255, 255, 255, 0.1)
+    font_color=$COLOR_FOREGROUND
+    check_color=rgba(255, 255, 255, 0.75)
+    fail_color=rgba(255, 100, 100, 0.75)
+    outline_thickness=2
+    dots_size=0.25
+    dots_spacing=0.25
+    dots_center=true
+    fade_on_empty=false
+    rounding=-1
+    placeholder_text=<i><span foreground="##555555"></span></i>
+    hide_input=false
+    position=0,-125
+    halign=center
+    valign=center
 }
