--- a/configs/dotconfig/hypr/hyprlock.conf.d/example.conf
+++ b/configs/dotconfig/hypr/hyprlock.conf.d/example.conf
@@ -5,6 +5,14 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\____/\___/_/|_|  
 #                              /____/_/                              
 
+# COLORS
+
+$COLOR_FOREGROUND=0xFF000000
+$COLOR_BACKGROUND=0xFF000000
+$COLOR_NORMAL=0xFF000000
+$COLOR_ACTIVE=0xFF000000
+$COLOR_BORDER=0xFF000000
+
 # PRIMARY MONITOR
 
-$monitor_primary = HDMI-1
+$MONITOR_PRIMARY = HDMI-1
