--- a/configs/dotconfig/hypr/hyprland.conf
+++ b/configs/dotconfig/hypr/hyprland.conf
@@ -26,7 +26,9 @@ input {
     repeat_rate=25
     repeat_delay=300
     accel_profile=flat
+    kb_model=pc105
     kb_layout=us
+    kb_variant=altgr-intl
     numlock_by_default=true
     natural_scroll=false
 }
